<resources>
    <string name="app_name">Contacts</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>
    <string name="title_contacts">Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_contact">Search Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name_placeholder">name</string>
    <string name="contact_avatar_des">Contact avatar</string>
    <string name="contact_details_name">Username</string>
    <string name="contact_details_number">Number</string>
    <string name="contact_details_avatar_des">Avatar</string>
    <string name="contact_details_info">Contact Details</string>
    <string name="contact_details_title">RECENT CALLS</string>
    <string name="contact_details_settings_title">SETTINGS</string>
    <string name="message_button_des">message</string>
    <string name="call_button_des">Call</string>
    <string name="contact_details_number_des">Phone Number</string>
    <string name="contact_search_des">Search Contact</string>
    <string name="contact_add">Add Contact</string>
    <string name="contact_more">Import Contact</string>
    <string name="history_info_des">Call type</string>
    <string name="options">More options</string>
    <string name="add_contact_name_tip_string">Name</string>
    <string name="add_contact_number_tip_string">Mobile</string>
    <string name="add_contact_telephone_tip">Telephone:</string>
    <string name="add_contact_company_tip_string">Company:</string>
    <string name="add_contact_company_placeholder">Input Company</string>
    <string name="add_contact_email_tip_string">Email:</string>
    <string name="add_contact_email_placeholder">Input Email</string>
    <string name="add_contact_location_tip_string">Location:</string>
    <string name="add_contact_location_placeholder">Input Location</string>
    <string name="save_button_text">Save</string>
    <string name="add_contact_telephone_place_holder">Input Telephone number</string>
    <string name="add_contact_number_placeholder">Input number</string>
    <string name="save_contact">Save</string>
    <string name="add_contact_success">Add Contact Success</string>
    <string name="back_action_title">Back</string>
    <string name="today_history_label">Today</string>
    <string name="more_history_label">More</string>
    <string name="contact_more_options">More</string>
    <string name="favorite_contact_des">Favorite</string>
    <string name="edit_contact_des">Edit</string>
    <string name="favoriated">Favoriate success</string>
    <string name="unfavoriated">Unfavoriated</string>
    <string name="added_contact">Added Contact</string>
    <string name="favoriate_card_more_info_des">More</string>
    <string name="search_hint">Name or Number</string>
    <string name="title_detail">Contact Detail</string>
    <string name="update_contact_success">Update Success</string>
    <string name="empty_des">No Data</string>
    <string name="delete_contact_title">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="alert">Alert</string>
    <string name="delete_success">Delete Success</string>
    <string name="imported_contacts">Imported: </string>
    <string name="unit">contacts</string>
    <string name="backup_data_title">Backup</string>
    <string name="sync_history_tool">Sync call log</string>
    <string name="synced_history">Sync success: </string>
    <string name="sync_item">call logs</string>
    <string name="name_and_number_cant_null">Contact or number can\'t be empty</string>
    <string name="clear_history_label">Clear</string>
    <string name="sure_to_clear_history">Sure to clear?</string>
    <string name="cleared_history">Clear history success!</string>
</resources>