<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/contact_search"
        android:icon="@drawable/ic_search_contact"
        android:title="@string/contact_search_des"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact_add"
        android:icon="@drawable/ic_add_contact"
        android:title="@string/contact_add"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/import_contacts"
        android:icon="@drawable/ic_options"
        android:title="@string/contact_more"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/backup_data"
        android:icon="@drawable/ic_backup"
        android:title="@string/backup_data_title"
        app:showAsAction="collapseActionView" />
</menu>