<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_list_item"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/history_contact_avatar_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/history_contact_avatar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/contact_avatar_des"
            android:hapticFeedbackEnabled="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/history_contact_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/contact_name_placeholder"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/history_contact_avatar_card"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/history_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/history_info_des"
        app:layout_constraintBottom_toBottomOf="@+id/history_contact_number_info"
        app:layout_constraintStart_toEndOf="@+id/history_contact_avatar_card"
        app:layout_constraintTop_toTopOf="@+id/history_contact_number_info"
        app:srcCompat="@drawable/ic_phone_call" />

    <TextView
        android:id="@+id/history_contact_number_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/contact_details_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history_type" />

    <ImageView
        android:id="@+id/history_delete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>