<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.glancebar.contact.persistence.entity.Contact" />

        <variable
            name="contact"
            type="Contact" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_contact_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.add_contact.AddContactFragment">

            <ImageView
                android:id="@+id/add_contact_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/image_radius"
                android:contentDescription="@string/contact_avatar_des"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/add_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="@string/contact_details_number"
                android:ems="8"
                android:hint="@string/add_contact_number_placeholder"
                android:inputType="numberSigned|numberDecimal"
                android:text="@={contact.number, default=@string/contact_details_number}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_name"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/add_contact_number_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_number"
                android:text="@string/add_contact_number_tip_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_number"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_number"
                app:layout_constraintTop_toTopOf="@+id/add_contact_number" />

            <EditText
                android:id="@+id/add_contact_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="8"
                android:hint="@string/add_contact_telephone_place_holder"
                android:inputType="phone"
                android:text="@={contact.telephone, default=@string/add_contact_telephone_place_holder}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_number" />

            <TextView
                android:id="@+id/add_contact_telephone_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_telephone"
                android:text="@string/add_contact_telephone_tip"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_telephone"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_telephone"
                app:layout_constraintTop_toTopOf="@+id/add_contact_telephone" />


            <TextView
                android:id="@+id/add_contact_email_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_email"
                android:text="@string/add_contact_email_tip_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_email"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_email"
                app:layout_constraintTop_toTopOf="@+id/add_contact_email" />

            <EditText
                android:id="@+id/add_contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="8"
                android:hint="@string/add_contact_email_placeholder"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@={contact.telephone, default=@string/add_contact_email_placeholder}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_telephone" />


            <EditText
                android:id="@+id/add_contact_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="8"
                android:hint="@string/add_contact_company_placeholder"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={contact.company, default=@string/add_contact_company_placeholder}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_email" />

            <TextView
                android:id="@+id/add_contact_company_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_company"
                android:text="@string/add_contact_company_tip_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_company"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_company"
                app:layout_constraintTop_toTopOf="@+id/add_contact_company" />

            <TextView
                android:id="@+id/add_contact_location_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_location"
                android:text="@string/add_contact_location_tip_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_location"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_location"
                app:layout_constraintTop_toTopOf="@+id/add_contact_location" />

            <EditText
                android:id="@+id/add_contact_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="8"
                android:hint="@string/add_contact_location_placeholder"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={contact.location, default=@string/add_contact_location_placeholder}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_company"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/add_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="@string/contact_name_placeholder"
                android:ems="8"
                android:hint="@string/contact_name_placeholder"
                android:inputType="textPersonName"
                android:text="@={contact.username,default=@string/contact_name_placeholder}"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_avatar" />

            <TextView
                android:id="@+id/add_contact_name_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/add_contact_name"
                android:text="@string/add_contact_name_tip_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_contact_name"
                app:layout_constraintEnd_toStartOf="@+id/add_contact_name"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_avatar" />

<!--            <ImageButton-->
<!--                android:id="@+id/add_contact_save_button"-->
<!--                android:layout_width="60dp"-->
<!--                android:layout_height="60dp"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:layout_marginBottom="4dp"-->
<!--                android:background="@drawable/save_button"-->
<!--                android:contentDescription="@string/call_button_des"-->
<!--                android:onClick="saveContact"-->
<!--                android:scaleType="center"-->
<!--                android:src="@drawable/ic_save"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/add_contact_save"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/add_contact_location" />-->

<!--            <TextView-->
<!--                android:id="@+id/add_contact_save"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginBottom="32dp"-->
<!--                android:text="@string/save_button_text"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="15sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/add_contact_save_button" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>