<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.glancebar.contact.persistence.entity.Contact" />

        <variable
            name="contact"
            type="Contact" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.details.DetailsFragment">

            <ImageView
                android:id="@+id/contact_details_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/contact_details_avatar_des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/contact_details_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact_details"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details_avatar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact_details_related_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details_username">

                <ImageButton
                    android:id="@+id/contact_details_number_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/white"
                    android:contentDescription="@string/contact_details_number_des"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/contact_details_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:rotationX="0"
                    android:text="@string/contact_details_number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/contact_details_number_info"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/contact_details_info"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:rotationX="0"
                    android:text="@string/contact_details_info"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/contact_details_number"
                    app:layout_constraintTop_toBottomOf="@+id/contact_details_number" />

                <ImageButton
                    android:id="@+id/contact_details_call"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_radius"
                    android:contentDescription="@string/call_button_des"
                    android:src="@drawable/ic_phonecall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/contact_details_message"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/contact_details_message"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/button_radius"
                    android:contentDescription="@string/message_button_des"
                    android:src="@drawable/ic_message"
                    app:layout_constraintBottom_toBottomOf="@+id/contact_details_call"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/contact_details_call" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/contact_details_recent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_details_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details_related_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contact_detail_history_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:rotationX="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details_recent_title"
                tools:listitem="@layout/history_list_item" />

            <TextView
                android:id="@+id/contact_details_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/contact_details_settings_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_detail_history_recycler" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>